Converted CSS stylesheets to LESS

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hello World!</title>
+    <title>TLoBT Toolbox</title>
 
     <!-- Styling -->
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="style.css">
 
     <!-- JS -->
     <script
@@ -17,6 +17,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- <PANEL> -->
       <div id="cols">
         <div id="cols-header">COLEÇÕES</div>
         <div id="cols-content">
@@ -78,6 +79,12 @@
 
         </div>
       </div>
+      <!-- </PANEL> -->
+      <!-- <EDITOR> -->
+      <div class="editor">
+
+      </div>
+      <!-- </EDITOR> -->
     </div>
   </body>
 </html>
